<resources>
    <string name="app_name">微聊</string>
    <string name="speak">按住说话</string>
    <string name="get_image_fail">获取照片数据出错</string>
    <string name="play_voice_error">语音文件下载失败</string>
    <string name="homeGroup">家庭圈</string>
    <string name="voice_error_msg">录音时间太短</string>
    <string name="out_off_limit">录音最大时长为20秒</string>
    <string name="out_off_limit_format">录音最大时长为%s秒</string>
    <string name="synchronizing">正在加载</string>
    <string name="disk_error">创建本地目录失败</string>
    <string name="cancel_record">取消录音</string>
    <string name="no_data">没有消息</string>
    <string name="square_mode">方屏模式</string>
    <string name="circle_mode">圆屏模式</string>
    <string name="wrong_data">获取用户失败</string>
    <string name="share_to">分享给</string>
    <string name="share_error">分享图片失败</string>
    <string name="no_contact">没有联系人</string>
    <string name="contact_fail">获取联系人信息出错</string>
    <string name="me">我</string>
    <string name="missing_required_permission">缺少关键权限</string>
    <string name="internet_down">网络连接异常</string>
    <string name="file_not_found">无法找到文件</string>
    <string name="send_voice_fail">发送语音出错</string>
    <string name="send_image_fail">发送图片出错</string>
    <string name="traffic_dialog_title">流量禁止使用</string>
    <string name="traffic_dialog_content">流量已经被家长禁止使用，请连接wifi</string>
    <string name="traffic_dialog_wifi">WIFI</string>
    <string name="traffic_dialog_exit">退出</string>

    <!--A6-->
    <string name="request_friend_title">新朋友</string>
    <string name="warning_group_create">请选择至少两位好友</string>
    <string name="warning_group_add">请选择至少一位好友</string>
    <string name="warning_group_remove">请选择至少一位好友</string>
    <string name="add_friend_content">确定添加%s为好友吗？</string>
    <string name="request_friend_content">%s请求添加你为好友，添加后可以微聊和打电话</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="warning_disband_group">确定解散该群吗</string>
    <string name="warning_leave_group">确定退出该群吗</string>
    <string name="warning_no_phone_number">为了不影响好友间的正常联系，请在家长端宝贝资料添加电话号码。</string>
    <string name="load_failure">加载失败</string>
    <string name="add">添加</string>
    <string name="remove">删除</string>

</resources>
