<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="222px"
    android:layout_height="114px"
    android:layout_gravity="center"
    android:background="@drawable/corners_while">

    <TextView
        android:id="@+id/add_friend_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18px"
        android:layout_marginTop="16px"
        android:layout_marginEnd="18px"
        android:text="@string/add_friend_content"
        android:textColor="@android:color/black"
        android:textSize="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="46px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#00d2ff"
            android:textSize="20px" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="48px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#00d2ff"
            android:textSize="20px" />

    </LinearLayout>

</FrameLayout>