<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/square_screen_width"
    android:layout_height="@dimen/square_screen_width"
    android:layout_gravity="center"
    android:background="@color/main_color">
    <TextView 
        android:id="@+id/choose_friend_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/choose_friend_tip_text_size"
        android:layout_marginTop="@dimen/choose_friend_margin_top"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/share_to"/>
	<android.support.v7.widget.RecyclerView
        android:id="@+id/choose_friend_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/choose_friend_tip"
		android:layout_marginTop="@dimen/choose_friend_margin_top"
		/>
	<TextView
        android:id="@+id/no_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_contact"
        android:textColor="@android:color/white"
        android:textSize="@dimen/friend_name_textSize"
        android:gravity="center"
        android:visibility="gone"/>
	<TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/synchronizing"
        android:textColor="@android:color/white"
        android:textSize="@dimen/friend_name_textSize"
        android:gravity="center"
        android:background="@color/main_color"/>
</RelativeLayout>
