<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_common_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/corners_while">

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_common_content_margin_left"
        android:layout_marginTop="@dimen/dialog_common_content_margin_top"
        android:layout_marginEnd="@dimen/dialog_common_content_margin_right"
        android:layout_marginBottom="@dimen/dialog_common_content_margin_bottom"
        android:text="@string/add_friend_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_common_content_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_left_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_common_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#00d2ff"
            android:textSize="@dimen/dialog_common_button_text_size" />


        <TextView
            android:id="@+id/dialog_right_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_common_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#00d2ff"
            android:textSize="@dimen/dialog_common_button_text_size" />

    </LinearLayout>

</LinearLayout>