<?xml version="1.0" encoding="utf-8"?>
<com.readboy.view.ConversationView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/square_screen_width"
    android:layout_height="@dimen/square_screen_width"
    android:layout_gravity="center"
    android:splitMotionEvents="false">

    <ListView
        android:id="@+id/conversation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:overScrollMode="never"
        android:stackFromBottom="true"
        android:scrollbars="none" />

    <!--TopBar-->
    <TextView
        android:id="@+id/conversation_name_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_conversation_name_tip_magin_left"
        android:ellipsize="end"
        android:maxWidth="@dimen/page_conversation_name_tip_max_width"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="@dimen/page_conversation_name_tip_text_size" />
    <!--BottomBar-->
    <LinearLayout
        android:id="@+id/conversation_send_msg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/action_bar_bg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/page_conversation_send_msg_tab_padding_bottom">

        <Space
            android:layout_width="@dimen/page_conversation_send_msg_tab_space_width"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/send_emoji_btn"
            android:layout_width="@dimen/page_conversation_send_msg_tab_emoji_btn_size"
            android:layout_height="@dimen/page_conversation_send_msg_tab_emoji_btn_size"
            android:background="@drawable/send_emoji_btn_sel"
            android:clickable="true" />

        <Button
            android:id="@+id/send_voice_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/page_conversation_send_msg_tab_emoji_btn_size"
            android:layout_marginLeft="@dimen/page_conversation_send_msg_tab_space_width"
            android:layout_marginRight="@dimen/page_conversation_send_msg_tab_space_width"
            android:layout_weight="1"
            android:background="@drawable/btn_send_voice_short_selector"
            android:textColor="@android:color/white" />

        <View
            android:id="@+id/send_image_btn"
            android:layout_width="@dimen/page_conversation_send_msg_tab_emoji_btn_size"
            android:layout_height="@dimen/page_conversation_send_msg_tab_emoji_btn_size"
            android:background="@drawable/send_image_btn_sel"
            android:clickable="true" />

        <Space
            android:layout_width="@dimen/page_conversation_send_msg_tab_space_width"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_msg_tip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/conversation_item_height"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="#cccccc"
        android:textSize="@dimen/page_conversation_no_msg_tip_text_size"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/synchronizing"
        android:textColor="@android:color/white"
        android:textSize="@dimen/friend_name_textSize"
        android:visibility="gone" />

</com.readboy.view.ConversationView>
